--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -8,13 +8,23 @@
     border: 1px solid var(--grey);
     border-radius: 15px;
     padding: .8rem;
-    margin: 0 3rem;
+    margin-left: 3rem;
     height: 1rem;
     width: 100%;
 }
 .btn-yellow{
     font-weight: 700;
     background-color: var(--yellow);
+    border: none;
+    border-radius: 10px;
+    padding: 1rem 2rem;
+    margin-left: 2rem;
+    white-space: nowrap;
+    cursor: pointer;
+}
+.btn-light{
+    font-weight: 500;
+    background-color: var(--light1);
     border: none;
     border-radius: 10px;
     padding: 1rem 2rem;
@@ -61,4 +71,8 @@ h1{
     font-size: 32px;
     font-weight: 700;
     white-space: nowrap;
+}
+h2{
+    font-size: 24px;
+    font-weight: 700;
 }
