--- a/src/components/BooksManagement/BooksManagement.css
+++ b/src/components/BooksManagement/BooksManagement.css
@@ -2,3 +2,13 @@
     width: 19rem;
     margin-left: 2rem;
 }
+
+.filters-child{
+    display: flex;
+}
+.filters-child input{
+    margin-left: 1rem;
+}
+.filters-child button{
+    margin-left: 1rem;
+}
